Fix for issues: Alignment of heading in card widget is not proper and allow background color for heading

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1196,6 +1196,12 @@ body.modal-open {
       display: inline-block;
     }
   }
+  &.Inline {
+    > .panel-heading {
+      display: table-caption;
+      background-color: inherit;
+    }
+  }
   > ul {
     display: block;
     padding-bottom: 1px; //Fix for unnecessary vertical scrollbar on the list
